# ClaudeMCP

./: README.md  eeg_schema.sql  mockeegdata.sql  moredata.py  oldeeg_schema.sql  start-mcp-servers.ps1  test.db
eeg/: README.md  pyproject.toml
eeg/src/eeg/: server.py
